Implement reviewer's feedback